[gd_scene load_steps=23 format=3 uid="uid://cr0f248x5bkhg"]

[ext_resource type="Script" uid="uid://nyhe12j6rbx" path="res://scripts/Enemy/FlyingDino/flying_dino_enemy.gd" id="1_vbxqa"]
[ext_resource type="Shader" uid="uid://c5tjc3y1melp2" path="res://shaders/enemies/enemy_hit.gdshader" id="2_no5lw"]
[ext_resource type="Script" uid="uid://ey6sb7phbmet" path="res://scripts/State Machine.gd" id="2_vbxqa"]
[ext_resource type="Texture2D" uid="uid://b5ml4vn45fo3p" path="res://textures/enemy_dinos/dino_enemy_Ptero_1.png" id="3_g03it"]
[ext_resource type="Texture2D" uid="uid://cp6unnwvpgs5s" path="res://textures/enemy_dinos/dino_enemy_Ptero_2.png" id="4_mwrhf"]
[ext_resource type="Script" uid="uid://pqquwts5rq17" path="res://scripts/Enemy/FlyingDino/flying_dino_idle.gd" id="4_y5tnh"]
[ext_resource type="Texture2D" uid="uid://bvp6fobiuauow" path="res://textures/enemy_dinos/dino_enemy_Ptero_3.png" id="5_5xrnw"]
[ext_resource type="Script" uid="uid://bde4jyvrl64fd" path="res://scripts/Enemy/FlyingDino/flying_dino_charge.gd" id="5_ikj4b"]
[ext_resource type="Script" uid="uid://bfno11y1c3dc0" path="res://scripts/Enemy/FlyingDino/flying_dino_dead.gd" id="6_5e5ng"]
[ext_resource type="Texture2D" uid="uid://d8755xb5gdx3" path="res://textures/enemy_dinos/dino_enemy_Ptero_4.png" id="6_u1gk3"]
[ext_resource type="Script" uid="uid://d1dxmemk40n8c" path="res://scripts/Enemy/FlyingDino/flying_dino_preparing.gd" id="7_dcr2x"]
[ext_resource type="Texture2D" uid="uid://ijqkww6ggwkr" path="res://textures/enemy_dinos/dino_enemy_Ptero_5.png" id="7_u7iyd"]
[ext_resource type="Texture2D" uid="uid://bledbq2wypxmn" path="res://textures/enemy_dinos/dino_enemy_Ptero_6.png" id="8_ux0fp"]
[ext_resource type="Texture2D" uid="uid://dcl5itbssc17l" path="res://textures/enemy_dinos/dino_enemy_Ptero_7.png" id="9_wnbxe"]
[ext_resource type="Texture2D" uid="uid://dyvi2l2os58om" path="res://textures/enemy_dinos/dino_enemy_Ptero_8.png" id="10_646pg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_byhup"]
resource_local_to_scene = true
shader = ExtResource("2_no5lw")
shader_parameter/color_percentage = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_y5tnh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_g03it")
}, {
"duration": 1.0,
"texture": ExtResource("4_mwrhf")
}, {
"duration": 1.0,
"texture": ExtResource("5_5xrnw")
}, {
"duration": 1.0,
"texture": ExtResource("6_u1gk3")
}, {
"duration": 1.0,
"texture": ExtResource("7_u7iyd")
}, {
"duration": 1.0,
"texture": ExtResource("8_ux0fp")
}, {
"duration": 1.0,
"texture": ExtResource("9_wnbxe")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_646pg")
}],
"loop": true,
"name": &"prepare",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_g03it")
}],
"loop": true,
"name": &"turn_around",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ikj4b"]
radius = 91.1373

[sub_resource type="Animation" id="Animation_7img5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/color_percentage")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_ufq8q"]
resource_name = "enemy_hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/color_percentage")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 0.0]
}

[sub_resource type="Animation" id="Animation_opffk"]
resource_name = "enemy_start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/color_percentage")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_68t6p"]
_data = {
&"RESET": SubResource("Animation_7img5"),
&"enemy_hit": SubResource("Animation_ufq8q"),
&"enemy_start": SubResource("Animation_opffk")
}

[node name="FlyingDino" type="CharacterBody2D" groups=["FlyingDino"]]
collision_layer = 4
collision_mask = 2
motion_mode = 1
script = ExtResource("1_vbxqa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_byhup")
sprite_frames = SubResource("SpriteFrames_y5tnh")
animation = &"turn_around"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 5)
shape = SubResource("CircleShape2D_ikj4b")

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_vbxqa")
initial_state = NodePath("FlyingDinoIdle")

[node name="FlyingDinoIdle" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("4_y5tnh")
enemy = NodePath("../..")
metadata/_custom_type_script = "uid://pqquwts5rq17"

[node name="FlyingDinoCharge" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_ikj4b")
enemy = NodePath("../..")
metadata/_custom_type_script = "uid://bde4jyvrl64fd"

[node name="FlyingDinoDead" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_5e5ng")
enemy = NodePath("../..")
metadata/_custom_type_script = "uid://bfno11y1c3dc0"

[node name="FlyingDinoPreparing" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_dcr2x")
enemy = NodePath("../..")
metadata/_custom_type_script = "uid://d1dxmemk40n8c"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_68t6p")
}
